# wyrmhort

./: .firebaserc  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  firebase.json  firestore.rules
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: 02-feature_request.yml  03-support_request.yml  config.yml
.github/actions/backend-setup/: action.yml
.github/actions/frontend-setup/: action.yml
.github/copilot/: architecture.md  conventions.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  build-and-test.yml  frontend-ci.yml  frontend-deploy.yml  generate-sbom.yml  sbom.yml  snyk-security.yml  snyk.yml  unit-tests.yml  validate-pr.yml
backend/: .coverage  .dockerignore  .flake8  Dockerfile  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
backend/src/: logger_config.py  wyrmhort.py
backend/src/api/: routes.py
backend/src/expenses/: models.py  schemas.py  service.py
backend/src/firebase/: __init__.py  auth.py  firestore.py
backend/src/firestore/: client.py
backend/tests/: conftest.py
backend/tests/api/: test_routes.py
backend/tests/expenses/: test_schemas.py  test_service.py
backend/tests/firebase/: test_auth.py  test_firestore.py
backend/tests/firestore/: test_client.py
backend/tests/integration/: test_expenses_crud.py
backend/tests/unit/api/: test_routes.py
backend/tests/unit/expenses/: test_schemas.py  test_service.py
backend/tests/unit/firebase/: test_auth.py  test_firestore.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/src/: firebase.ts.html  index.html  logger.ts.html
frontend/coverage/src/components/: LoadingSpinner.tsx.html  Pagination.tsx.html  SortIndicator.tsx.html  index.html
frontend/coverage/src/hooks/: index.html  useAuth.ts.html
frontend/public/: demo-data.json  site.webmanifest
frontend/src/: App.tsx  firebase.ts  i18n.ts  logger.ts  main.tsx  styles.css
frontend/src/components/: DarkModeToggle.tsx  DateRangeFilter.tsx  ExpenseDialog.css  ExpenseDialog.tsx  ExpenseTable.tsx  Footer.tsx  LanguageSwitch.tsx  LoadingSpinner.tsx  Pagination.tsx  SortIndicator.tsx  Tabs.tsx
frontend/src/components/__tests__/: ExpenseDialog.test.tsx  ExpenseTable.test.tsx  LoadingSpinner.test.tsx  Pagination.test.tsx  SortIndicator.test.tsx
frontend/src/hooks/: useApiExpenses.ts  useAuth.ts  useAuth.tsx  useExpenseFilters.ts  useFirestoreExpenses.ts
frontend/src/hooks/__tests__/: useApiExpenses.test.ts  useAuth.test.ts  useAuth.test.tsx  useExpenseFilters.test.ts
frontend/src/locales/de/: translation.json
frontend/src/locales/en/: translation.json
frontend/src/pages/: Dashboard.tsx  ExpensesView.tsx  Login.tsx  Overview.tsx  PieChart.css  PieChart.tsx  PivotOverview.css  PivotOverview.tsx
frontend/src/pages/__tests__/: ExpensesView.test.tsx  PieChart.test.tsx  PivotOverview.test.tsx
frontend/src/test/: setup.ts
frontend/src/types/: Expense.ts  ExpenseFilters.ts
frontend/src/utils/: expenses.ts
