[project]
name = "wyrmhort-backend"
version = "0.1.0"
description = "Wyrmhort expense tracking backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "mypy>=1.19.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[project.scripts]
wyrmhort = "wyrmhort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/api", "src/expenses", "src/firebase"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "__pycache__", "venv", ".venv", "env", "build", "dist", ".idea", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.14"
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
